--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <!-- Slideshow container -->
     <h1>Coding projects for HTML, CSS, JS</h1>
-    <p class="description">The following projects showcase my ability to work in HTML, CSS, and JavaScript, the programming languages of web development. Cycle through the carousel with the buttons, and click on any image to learn more!</p>
+    <p class="description">The following projects showcase my ability to work in HTML, CSS, and JavaScript, the programming languages of web development. Cycle through the carousel with the buttons, and click on any image to learn more! test</p>
     <div class="slideshow-container">
 
         <!-- Full-width images with number and caption text -->
